--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -35,11 +35,12 @@
 
 	<div id="left-sidebar">
 
+    <% if params[:action] == "show" %>
 
         <div class="conbox">
           <div class="headstrip" style="margin-bottom:10px">
 
-            <div style="float:right; margin:5px 5px 0 0"><input type="checkbox" class="pub_on" /></div>
+            <div style="float:right; margin:5px 5px 0 0"><input type="checkbox" class="pub_on" <%= 'checked="checked"' if @binder.is_pub? %>/></div>
             <div class="inner">
             Share 
             </div>
@@ -48,12 +49,12 @@
 
 
 
-          <div class="noShare">
+          <div class="noShare" <%= "style=display:none" if @binder.is_pub? %>>
             All folders & files that you share publicly are <strong>free storage</strong> - and you can share them on social networks!
           </div>
 
 
-          <div class="sharelinks" style="display:none">
+          <div class="sharelinks" <%= "style=display:none" if !@binder.is_pub? %>>
 
             <div>
 
@@ -86,7 +87,7 @@
 
         </div>
 
-
+    <% end %>
 
 
 
