--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -34,13 +34,20 @@
     		              <!-- <div class="single-hold" src="<%= imgarr[0].to_s %>" > -->
                       <div class="single-hold" style="background-image:url('<%= imgarr[0].to_s %>');">
 
-                        <div class="thumb-wrap">
-                          <img class="thumb1" src="<%= imgarr[1].to_s %>" />
+                      	<% if !imgarr[1].nil? && !imgarr[1].empty? %>
 
-                          <br />
+	                        <div class="thumb-wrap">
+	                          <img class="thumb1" src="<%= imgarr[1].to_s %>" />
 
-                          <img class="thumb2" src="<%= imgarr[2].to_s %>" />
-                        </div>
+	                          <% if !imgarr[2].nil? && !imgarr[2].empty? %>
+
+		                          <br />
+
+		                          <img class="thumb2" src="<%= imgarr[2].to_s %>" />
+		                      <% end %>
+	                        </div>
+
+	                    <% end %>
 
     		              </div>
     		            </div>
