--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -4,11 +4,11 @@
 
 <% else %>
 
-	<%= link_to(image_tag(@binder.current_version.imgfile.contentview.url), @binder.current_version.data, :target => "_blank") %>
+	<%= link_to(image_tag(@binder.current_version.imgfile.contentview.url),
+				@binder.current_version.data,
+				:target => "_blank") %>
 
 <% end %>
-
-<br /><br />
 
 <% if !@binder.current_version.embed %>
 	<% if @binder.format == 1 %>
@@ -21,5 +21,3 @@
 
 	<% end %>
 <% end %>
-
-<br /><br /><br />
