--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -1,6 +1,17 @@
-<% if !@binder.current_version.get_html.empty? %>
+<% if @binder.current_version.croc? %>
+
+	<!--
+	<iframe id="crocFrame" style="width: 700px; height: 600px;" src="https://crocodoc.com/view/@binder.current_version.get_croc_session" ></iframe>
+	-->
 	
-	<%= @binder.current_version.get_html.html_safe %>
+	<%= javascript_include_tag "http://static-v2.crocodoc.com/core/docviewer.js" %>
+	<%= javascript_include_tag "https://crocodoc.com/webservice/document.js?session=#{@binder.current_version.get_croc_session}" %>
+	<div id="docviewer"></div>
+	<%= javascript_tag "var docviewer = new DocViewer({ \"id\": \"docviewer\" });" %>
+
+<% elsif @binder.current_version.youtube? %>
+
+	<iframe title="YouTube video player" width="640" height="390" src="http://www.youtube.com/embed/<%= CGI.parse(URI.parse(@binder.current_version.data).query)["v"].first %>?modestbranding=1" frameborder="0" allowfullscreen></iframe>
 
 <% else %>
 
