--- a/app/assets/stylesheets/strap.css
+++ b/app/assets/stylesheets/strap.css
@@ -164,7 +164,7 @@ body {
   line-height: 18px;
   color: #333333;
   background-color: #F6F6F6;
-  background: #F7F5F5 url(/claco/img/paper.jpg) repeat;
+  background: #F7F5F5 url(/assets/paper.jpg) repeat;
   
   padding-top: 120px;
   padding-bottom: 40px;
