--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -42,7 +42,7 @@
 
             <div style="float:right; margin:5px 5px 0 0"><input type="checkbox" class="pub_on" <%= 'checked="checked"' if @binder.is_pub? %>/></div>
             <div class="inner">
-            Share 
+            Public 
             </div>
 
           </div>
@@ -228,6 +228,9 @@
 
           </div>
         </div>
+
+
+
 
 
       </div>
