--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -1,13 +1,6 @@
 <% if @binder.current_version.croc? %>
 
-	<!--
-	<iframe id="crocFrame" style="width: 700px; height: 600px;" src="https://crocodoc.com/view/@binder.current_version.get_croc_session" ></iframe>
-	-->
-
-	<%= javascript_include_tag "http://static-v2.crocodoc.com/core/docviewer.js" %>
-	<%= javascript_include_tag "https://crocodoc.com/webservice/document.js?session=#{@binder.current_version.get_croc_session}" %>
-	<div id="docviewer"></div>
-	<%= javascript_tag "var docviewer = new DocViewer({ \"id\": \"docviewer\" });" %>
+	<iframe id="crocFrame" width="700" height="600" src="https://crocodoc.com/view/<%= @binder.current_version.get_croc_session %>" ></iframe>
 
 <% elsif @binder.current_version.youtube? %>
 
