--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -1076,6 +1076,24 @@
 
 
 
+.embeddrop {
+  -moz-box-shadow:0px 0px 3px #999;
+  -webkit-box-shadow:0px 0px 3px #999;
+  box-shadow:0px 1px 6px #999;
+}
+
+.embedlink {
+  width:700px;
+  height:400px;
+  overflow:hidden;
+  border:4px solid #666;
+  -moz-box-shadow:0px 0px 3px #999;
+  -webkit-box-shadow:0px 0px 3px #999;
+  box-shadow:0px 1px 6px #999;
+}
+
+
+
 
 
 
