--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -275,7 +275,7 @@
     <form action="#" class="bodcon">
       <div class="conitem">
         <input name="weblink" class="weblink" style="width:300px" type="text" placeholder="http:// or <embed>" />
-        <input name="webtitle" maxlength="55" class="webtitle" style="width:300px" type="text" placeholder="Title of the web page" />
+        <input name="webtitle" maxlength="50" class="webtitle" style="width:300px" type="text" placeholder="Title of the web page" />
 
         <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
         <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the web page"></textarea>
@@ -304,7 +304,7 @@
 
     <form action="#" class="bodcon">
       <div class="conitem">
-        <input name="foldertitle" maxlength="55" class="firstfocus webtitle" style="width:300px" type="text" placeholder="Title of the new folder" />
+        <input name="foldertitle" maxlength="50" class="firstfocus webtitle" style="width:300px" type="text" placeholder="Title of the new folder" />
 
         <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
         <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the folder"></textarea>
@@ -359,7 +359,7 @@
 
 		<form action="#" class="bodcon">
 		  <div class="conitem">
-		    <input name="newtitle" maxlength="55" class="firstfocus rename-title" style="width:260px" type="text" />
+		    <input name="newtitle" maxlength="50" class="firstfocus rename-title" style="width:260px" type="text" />
 		    <input name="conid" class="conid" type="hidden" />
 
 		  </div>
@@ -424,7 +424,7 @@
           <div class="pickerpane">
 
 
-            <% Binder.where("parent.id" => "0", :owner => current_teacher.id).each do |binder| %>
+            <% @root.each do |binder| %>
 
 
               <% if binder.parent["id"] == "0" %>
@@ -487,7 +487,7 @@
           <div class="pickerpane">
 
 
-            <% Binder.where("parent.id" => "0", :owner => current_teacher.id).each do |binder| %>
+            <% @root.each do |binder| %>
 
             <div class="bndr">
 
