precleanup commit - smart thumbnails working

--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -4,7 +4,7 @@
 
 <% else %>
 
-	<%= link_to(image_tag(@binder.current_version.imgfile.contentview.url), @binder.current_version.data, :target => "_blank") %>
+	<%= link_to(image_tag(@binder.current_version.img_contentview.url), @binder.current_version.data, :target => "_blank") %>
 
 <% end %>
 
