--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -1077,8 +1077,8 @@
 
 
 .embeddrop {
-  -moz-box-shadow:0px 0px 3px #999;
-  -webkit-box-shadow:0px 0px 3px #999;
+  -moz-box-shadow:0px 1px 6px #999;
+  -webkit-box-shadow:0px 1px 6px #999;
   box-shadow:0px 1px 6px #999;
 }
 
@@ -1086,11 +1086,43 @@
   width:700px;
   height:400px;
   overflow:hidden;
-  border:4px solid #666;
-  -moz-box-shadow:0px 0px 3px #999;
-  -webkit-box-shadow:0px 0px 3px #999;
+  -moz-box-shadow:0px 1px 6px #999;
+  -webkit-box-shadow:0px 1px 6px #999;
   box-shadow:0px 1px 6px #999;
+  margin-left:5px;
 }
+
+.embedlink .linkboxer {
+  position:absolute;
+  margin-top:175px;
+  margin-left:250px;
+
+
+  opacity: 0.98;
+  filter: alpha(opacity=98);
+
+  -moz-box-shadow:0px 1px 6px #666;
+  -webkit-box-shadow:0px 1px 6px #666;
+  box-shadow:0px 1px 6px #666;
+
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  display:none;
+  z-index:100;
+}
+
+.embedlink .whitelay {
+  position:absolute;
+  width:700px;
+  height:400px;
+  background:#fff;
+  opacity: 0.70;
+  filter: alpha(opacity=70);
+  z-index:99;
+  display:none;
+}
+
 
 
 
