--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -8,7 +8,7 @@
 
 <% elsif @binder.current_version.img? %>
 
-	<center><%= link_to(	image_tag(@binder.current_version.imgfile.contentview.url, :class => "embeddrop"),
+	<center><%= link_to(	image_tag(@binder.current_version.img_contentview.url, :class => "embeddrop"),
 					@binder.format == 1 ? named_binder_route(@binder, "download") : @binder.current_version.data,
 					:target => "_blank") %></center>
 
@@ -26,7 +26,7 @@
 
 		<div class="whitelay"></div>
 
-	<%= image_tag(@binder.current_version.imgfile.contentview.url) %>
+	<%= image_tag(@binder.current_version.img_contentview.url) %>
 	</div>
 </a>
 
