small fix for default folder image visibility

--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -56,7 +56,8 @@
                     # is a folder
                   %>
 
-                  	<% if binder.children.count == 0%>
+                  	<% if binder.thumbimgids.reject{""}.empty?
+                  	#binder.children.count == 0 ||  %>
 
 						<div class="folder-preview">
 							<div class="dyncon">
