Auto embed video content sites

--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -32,7 +32,8 @@
 		                  		<div class="gen-file">
 		                  			<div class="filebox">
 		                  				<div class="filext">
-		                  					<%= binder.current_version.ext.sub('.','') %>
+		                  					<%= binder.current_version.ext.sub('.','') if binder.format == 1 %>
+		                  					<%= "www" if binder.format == 2 %>
 		                  				</div>
 		                  			</div>
 		                  		</div>
