Added reverse embed support

--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -25,7 +25,7 @@
 
 	                  	<div class="folder-preview">
 							<div class="contype">
-								<img src="/assets/binders/types/file.png" style="width:24px" />
+								<img src="<%= get_contype_icon(binder) %>" style="width:24px" />
 							</div>
 		                  	<div class="dyncon">
 
