--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -8,7 +8,7 @@
 
 <% elsif @binder.current_version.educreations? %>
 
-	<center><iframe width="480" height="300" src="http://www.educreations.com/lesson/embed/<%= @binder.current_version.get_educreations_id %>/" frameborder="0" allowfullscreen></iframe></center>
+	<center><iframe width="480" height="300" src="http://www.educreations.com/lesson/embed/<%= @binder.current_version.get_educreations_id %>" frameborder="0" allowfullscreen></iframe></center>
 
 <% elsif @binder.current_version.vimeo? %>
 
